<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#194D78"
    tools:context=".Registration">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="178dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="250dp"
        android:contentDescription="@string/logo"
        android:foregroundGravity="center_vertical|center|center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.016"
        app:srcCompat="@drawable/garagelogo" />

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="443dp"
        android:gravity="center"
        android:text="@string/create_new_account"
        android:textColor="#F6F2F2"
        android:textSize="16sp"
        android:textStyle="normal|bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.0" />


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="93dp"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="700dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edtName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="MissingConstraints">

        <!-- Radio Button for Employee -->

        <!-- Radio Button for Customer -->
        <RadioButton
            android:id="@+id/radioEmployee"
            android:layout_width="154dp"
            android:layout_height="66dp"
            android:text="@string/employee"
            android:textColor="#EFEBEB"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioCustomer"
            android:layout_width="152dp"
            android:layout_height="69dp"
            android:layout_marginStart="16dp"
            android:text="@string/customer"
            android:textColor="#FAF3F3"
            android:textSize="16sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/edtName"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="#F3F8FD"
        android:textColorHint="#36F0ECEC"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:shadowColor="#F0F3F6"
        android:textColor="#FAF7F7"
        android:textColorHint="#36F0ECEC"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtName" />

    <EditText
        android:id="@+id/edtPhone"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textColor="#F9FBFD"
        android:textColorHint="#36F0ECEC"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtEmail"
        app:layout_constraintVertical_bias="0.035" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="300dp"
        android:layout_height="58dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#FDF9F9"
        android:gravity="center"
        android:shadowColor="#E4D5D5"
        android:text="@string/next"
        android:textColor="#194D78"
        android:textColorHighlight="#F6EDED"
        android:textColorHint="#F6F0F0"
        android:textColorLink="#E7E0E0"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/txtAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#EDE6E6" />

    <TextView
        android:id="@+id/txtAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:gravity="center"
        android:text="@string/haveAccount"
        android:textColor="#FDFDFD"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/txtLogin"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPhone" />

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtAccount"
        app:layout_constraintTop_toTopOf="@+id/txtAccount" />

    <EditText
        android:id="@+id/edtAuthorization"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="250dp"
        android:ems="10"
        android:hint="@string/authorization_code"
        android:inputType="numberPassword"
        android:textColor="#FDFDFD"
        android:textColorHint="#33F0EAEA"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
