<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Fragments.ReportFragment">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#CAC7C7"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Logo -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:contentDescription="App Logo"
            android:src="@drawable/logo" />

        <!-- Title -->
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:text="@string/report"
            android:textColor="#194C77"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <!-- ScrollView for content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/cardView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/lay"
            android:orientation="vertical">

            <!-- ConstraintLayout inside LinearLayout -->

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="-1dp"
                tools:layout_editor_absoluteY="0dp">

                <TextView
                    android:id="@+id/txtCustomerOfTheMonth"
                    android:layout_width="187dp"
                    android:layout_height="284dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:elevation="20dp"
                    android:text="@string/customer_of_the_month"
                    android:textColor="#C30F2085"
                    android:textSize="20sp"
                    android:textStyle="bold"

                    app:layout_constraintEnd_toStartOf="@+id/txtNumberOfCustomers"
                    app:layout_constraintHorizontal_bias="0.235"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtNumberOfCustomers"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="340dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/round_bg"
                    android:drawableTop="@drawable/customer"
                    android:gravity="center"
                    android:padding="10dp"
                    android:elevation="20dp"
                    android:text="@string/number_of_customers"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/txtNumberOfEmployees"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtEmployeeOfTheMonth"
                    android:layout_width="187dp"
                    android:layout_height="284dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/employee_of_the_month"
                    android:textColor="#C30F2085"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:elevation="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.277"
                    app:layout_constraintStart_toEndOf="@+id/txtNumberOfEmployees"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtNumberOfEmployees"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="340dp"
                    android:background="@drawable/round_bg"
                    android:drawableTop="@drawable/employee"
                    android:elevation="20dp"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/number_of_employees"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/txtNumberOfCustomers"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtRevenue"
                    android:layout_width="380dp"
                    android:layout_height="162dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/round_bg"
                    android:drawableLeft="@drawable/revenue"
                    android:elevation="20dp"
                    android:gravity="left"
                    android:padding="20dp"
                    android:text="@string/total_revenue"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtNumberOfEmployees" />

                <TextView
                    android:id="@+id/txtProfit"
                    android:layout_width="380dp"
                    android:layout_height="162dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="100dp"
                    android:background="@drawable/round_bg"
                    android:drawableLeft="@drawable/profit"
                    android:elevation="20dp"
                    android:gravity="left"
                    android:padding="20dp"
                    android:text="@string/total_profit"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtRevenue" />


            </androidx.constraintlayout.widget.ConstraintLayout>



        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
