<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/serviceForm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ServiceActivity">

    <!-- Toolbar Layout -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CAC7C7"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp">

        <!-- Back Button -->
        <ImageView
            android:id="@+id/back_button"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="Back Button"
            android:src="?attr/actionModeCloseDrawable"
            app:tint="#194C77"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="12dp" />

        <!-- Logo -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:contentDescription="App Logo"
            android:src="@drawable/logo" />

        <!-- Title -->
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:text="@string/add_service"
            android:textColor="#194C77"
            android:textSize="24sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <!-- Service Name Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtServiceName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/service_name"
        android:textColor="#194D78"
        android:textColorHint="#77194D78"
        app:boxStrokeColor="#194D78"
        app:cursorColor="#194D78"
        app:helperTextTextColor="#194D78"
        app:hintTextColor="#194D78"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="text"
            android:textColor="#194D78"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Price Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/price"
        android:textColor="#194D78"
        android:textColorHint="#77194D78"
        app:boxStrokeColor="#194D78"
        app:cursorColor="#194D78"
        app:helperTextTextColor="#194D78"
        app:hintTextColor="#194D78"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtServiceName">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textColor="#194D78"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Estimated Time Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtEstimatedTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/estimated_time"
        android:textColor="#194D78"
        android:textColorHint="#77194D78"
        app:boxStrokeColor="#194D78"
        app:cursorColor="#194D78"
        app:helperTextTextColor="#194D78"
        app:hintTextColor="#194D78"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPrice">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="text"
            android:textColor="#194D78"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Submit Service Button -->
    <Button
        android:id="@+id/btnSubmitService"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#194D78"
        android:text="@string/submit_service"
        android:textColor="#F8F9FA"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEstimatedTime" />

</androidx.constraintlayout.widget.ConstraintLayout>
